--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <title>Beauty Of Chiri</title>
   </head>
   <body>
-    <div class="bg-[#f8dff0]" id="root"></div>
+    <div class="" id="root"></div>
     <script type="module" defer src="/src/main.tsx"></script>
   </body>
 </html>
