--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,7 +2,8 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpeg" href="/mainlogo.jfif" />    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="icon" type="image/jpeg" href="/mainlogo.jfif" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beauty Of Chiri</title>
   </head>
   <body>
