--- a/frontend/index.html
+++ b/frontend/index.html
@@ -2,28 +2,28 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/jpeg" href="/mainlogo.jfif" />
+    <link rel="icon" type="image/x-icon" href="/mainlogo.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beauty Of Chiri</title>
-    <meta name="description" content="Discover the Beauty of Chiri – offering authentic handmade skincare products and luxurious beauty treatments like facials, massages, vaginal steaming, manicures, and pedicures. Achieve glowing, radiant skin with our natural, holistic approach to beauty and wellness.">
+    <meta name="description" content="Discover Chiri – authentic handmade skincare, facials, massages, vaginal steaming, manicures, and pedicures. Achieve glowing skin with our natural, holistic beauty and wellness approach.">
     <meta property="og:title" content="Beauty Of Chiri">
-    <meta property="og:description" content="Discover the Beauty of Chiri – offering authentic handmade skincare products and luxurious beauty treatments like facials, massages, vaginal steaming, manicures, and pedicures. Achieve glowing, radiant skin with our natural, holistic approach to beauty and wellness.">
-    <meta property="og:image" content="https://bochbeautyandskincare.shop/mainlogo.png">
+    <meta property="og:description" content="Discover Chiri – authentic handmade skincare, facials, massages, vaginal steaming, manicures, and pedicures. Achieve glowing skin with our natural, holistic beauty and wellness approach.">
+    <meta property="og:image" content="https://bochbeautyandskincare.shop/mainlogo.ico">
     <meta property="og:url" content="https://bochbeautyandskincare.shop/">
     <meta property="og:type" content="website">
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:title" content="Beauty Of Chiri">
-    <meta name="twitter:description" content="Discover the Beauty of Chiri – offering authentic handmade skincare products and luxurious beauty treatments like facials, massages, vaginal steaming, manicures, and pedicures. Achieve glowing, radiant skin with our natural, holistic approach to beauty and wellness.">
-    <meta name="twitter:image" content="https://bochbeautyandskincare.shop/mainlogo.png">
+    <meta name="twitter:description" content="Discover Chiri – authentic handmade skincare, facials, massages, vaginal steaming, manicures, and pedicures. Achieve glowing skin with our natural, holistic beauty and wellness approach.">
+    <meta name="twitter:image" content="https://bochbeautyandskincare.shop/mainlogo.ico">
     <link rel="canonical" href="https://bochbeautyandskincare.shop/">
     <script type="application/ld+json">
       {
         "@context": "https://schema.org",
         "@type": "WebPage",
         "name": "Beauty Of Chiri",
-        "description": "Discover the Beauty of Chiri – offering authentic handmade skincare products and luxurious beauty treatments like facials, massages, vaginal steaming, manicures, and pedicures. Achieve glowing, radiant skin with our natural, holistic approach to beauty and wellness.",
+        "description": "Discover Chiri – authentic handmade skincare, facials, massages, vaginal steaming, manicures, and pedicures. Achieve glowing skin with our natural, holistic beauty and wellness approach.",
         "url": "https://bochbeautyandskincare.shop/",
-        "image": "https://bochbeautyandskincare.shop/mainlogo.png"
+        "image": "https://bochbeautyandskincare.shop/mainlogo.ico"
       }
     </script>
   </head>
@@ -31,7 +31,7 @@
     <div class="" id="root">
       <noscript>
         <h1>Welcome to Beauty Of Chiri</h1>
-        <p>Discover the Beauty of Chiri – offering authentic handmade skincare products and luxurious beauty treatments like facials, massages, vaginal steaming, manicures, and pedicures. Achieve glowing, radiant skin with our natural, holistic approach to beauty and wellness.</p>
+        <p>Discover Chiri – authentic handmade skincare, facials, massages, vaginal steaming, manicures, and pedicures. Achieve glowing skin with our natural, holistic beauty and wellness approach.</p>
         <p>Please enable JavaScript to experience our full website.</p>
       </noscript>
     </div>
