--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/mainlogo.png" />
+    <link rel="icon" type="image/x-icon" href="./mainlogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Beauty Of Chiri</title>
     <meta name="description" content="Discover Chiri – authentic handmade skincare, facials, massages, vaginal steaming, manicures, and pedicures. Achieve glowing skin with our natural, holistic beauty and wellness approach.">
