--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,11 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="tr">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/mainlogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Beauty Of Chiri</title>
-    <meta name="description" content="Discover Chiri – authentic handmade skincare, facials, massages, vaginal steaming, manicures, and pedicures. Achieve glowing skin with our natural, holistic beauty and wellness approach.">
+    <title>Beauty Of Chiri | Handmade Skincare & Holistic Wellness</title>
+    <meta name="description" content="Discover Chiri – handmade skincare, facials, massages, and more. Achieve glowing skin with holistic beauty and wellness.">
+    <meta name="robots" content="index, follow">
+
     <meta property="og:title" content="Beauty Of Chiri">
     <meta property="og:description" content="Discover Chiri – authentic handmade skincare, facials, massages, vaginal steaming, manicures, and pedicures. Achieve glowing skin with our natural, holistic beauty and wellness approach.">
     <meta property="og:image" content="https://bochbeautyandskincare.shop/mainlogo.png">
@@ -22,8 +24,8 @@
         "@type": "WebPage",
         "name": "Beauty Of Chiri",
         "description": "Discover Chiri – authentic handmade skincare, facials, massages, vaginal steaming, manicures, and pedicures. Achieve glowing skin with our natural, holistic beauty and wellness approach.",
-        "url": "https://bochbeautyandskincare.shop/",
-        "image": "https://bochbeautyandskincare.shop/mainlogo.png"
+        "url": "https://www.bochbeautyandskincare.shop/",
+        "image": "https://www.bochbeautyandskincare.shop/mainlogo.png"
       }
     </script>
   </head>
