--- a/frontend/index.html
+++ b/frontend/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8" />
     <link rel="icon" type="image/x-icon" href="/mainlogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Beauty Of Chiri | Handmade Skincare & Holistic Wellness</title>
+    <title>Beauty Of Chiri </title>
     <meta name="description" content="Discover Chiri – handmade skincare, facials, massages, and more. Achieve glowing skin with holistic beauty and wellness.">
     <meta name="robots" content="index, follow">
 
